--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "fastify": "^3.19.1",
     "fastify-auth": "^1.1.0",
     "fastify-helmet": "^5.3.2",
